[package]
name = "library_details_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "offline"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Scientific calculations
statrs = "0.16"
ordered-float = { version = "4.2", features = ["serde"] }

# File handling
tempfile = "3.0"
csv = "1.3"

# Security
bcrypt = "0.13"
jsonwebtoken = "8.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0" 
