[package]
name = "library_details_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Scientific calculations
statrs = "0.16"
ordered-float = { version = "4.2", features = ["serde"] }

# File handling
tempfile = "3.0"
csv = "1.3"

# Security
bcrypt = "0.15"
jsonwebtoken = "9.2"

[dev-dependencies]
# Core testing framework
tokio-test = "0.4"
anyhow = "1.0"

# HTTP testing
axum-test = "15.0"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "timeout"] }

# Database testing
sqlx = { workspace = true }

# Test utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
fake = { version = "2.9", features = ["derive"] }
wiremock = "0.6"
mockall = "0.12"
serial_test = "3.0"
test-log = "0.2"
env_logger = "0.11"
once_cell = "1.19"

# JSON testing
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Time testing
chrono = { version = "0.4", features = ["serde"] }

# File testing
tempfile = "3.0"
csv = "1.3"

# Async testing utilities
futures = "0.3"
tokio = { version = "1.36", features = ["test-util", "rt-multi-thread", "macros"] } 
