[package]
name = "notification_service"
version = "0.1.0"
edition = "2024"
authors = ["Lab Management Team"]
description = "Multi-channel notification service for laboratory management system"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Async
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Email notifications
lettre = "0.11"

# SMS notifications
twilio = "1.1"

# Slack integration
slack-morphism = "2.0"

# Discord integration
serenity = "0.12"

# Microsoft Teams integration
# microsoft-teams = "0.1"  # Commented out - may not exist

# Template engine for message formatting
handlebars = "4.5"
tera = "1.19"

# Job scheduling  
# async-cron = "0.1"  # Commented out - yanked version

# Rate limiting
governor = "0.6"

# Retry logic
backoff = "0.4"

# WebSockets for real-time notifications
tokio-tungstenite = "0.20"

# Firebase Cloud Messaging (push notifications)
fcm = "0.9"

# WebHook support
# webhook = "2.0"  # Commented out - may not exist

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"

[[bin]]
name = "notification_service"
path = "src/main.rs" 
