[package]
name = "notification_service"
version = "0.1.0"
edition = "2024"
authors = ["Lab Management Team"]
description = "Multi-channel notification service for laboratory management system"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { workspace = true }

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Async
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Email notifications
lettre = "0.11"

# SMS notifications
twilio = "1.1"

# Slack integration
slack-morphism = "2.0"

# Discord integration
serenity = "0.12"

# Microsoft Teams integration
# microsoft-teams = "0.1"  # Commented out - may not exist

# Template engine for message formatting
handlebars = "4.5"
tera = "1.19"

# Job scheduling  
# async-cron = "0.1"  # Commented out - yanked version

# Rate limiting
governor = "0.6"

# Retry logic
backoff = "0.4"

# WebSockets for real-time notifications
tokio-tungstenite = "0.20"

# Firebase Cloud Messaging (push notifications)
fcm = "0.9"

# WebHook support
# webhook = "2.0"  # Commented out - may not exist

[dev-dependencies]
# Core testing framework
tokio-test = "0.4"
anyhow = "1.0"

# HTTP testing
axum-test = "15.0"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "timeout"] }

# Database testing
sqlx = { workspace = true }

# Test utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
fake = { version = "2.9", features = ["derive"] }
wiremock = "0.6"
mockito = "1.4"
mockall = "0.12"
serial_test = "3.0"
test-log = "0.2"
env_logger = "0.11"
once_cell = "1.19"

# JSON testing
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Time testing
chrono = { version = "0.4", features = ["serde"] }

# Async testing utilities
futures = "0.3"
tokio = { version = "1.36", features = ["test-util", "rt-multi-thread", "macros"] }

[[bin]]
name = "notification_service"
path = "src/main.rs" 
