[package]
name = "sample_service"
version = "0.1.0"
edition = "2021"
authors = ["Lab Management Team"]
description = "Sample management microservice for laboratory information system"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client for service communication
reqwest = { version = "0.11", features = ["json"] }

# Template processing
regex = "1.10"
once_cell = "1.19"

# Decimal numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# Async trait support
async-trait = "0.1"

# Random number generation
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "sample_service"
path = "src/main.rs" 
