[package]
name = "sequencing_service"
version = "0.1.0"
edition = "2021"
authors = ["Lab Management Team"]
description = "Sequencing workflow management microservice for laboratory sequencing operations"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client for service communication
reqwest = { version = "0.11", features = ["json", "multipart"] }

# File handling
csv = "1.3"
tempfile = "3.8"
mime = "0.3"

# Sequencing-specific libraries
# bioinformatics = "0.3"  # Commented out - package not found
bio = "1.6"

# Job scheduling and workflow
# async-cron = "0.1"  # Commented out - yanked version
futures = "0.3"

# Metrics and monitoring
prometheus = "0.13"

# Machine learning for sequencing analysis
# ndarray = "0.15"  # Commented out - complex dependency issues
# candle-core = "0.3"  # Commented out - complex dependency issues

# File compression
flate2 = "1.0"

# Email support
lettre = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempdir = "0.3"

[[bin]]
name = "sequencing_service"
path = "src/main.rs" 
