[package]
name = "spreadsheet_versioning_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spreadsheet_versioning_service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async trait
async-trait = "0.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Spreadsheet processing
calamine = "0.22"
csv = "1.2"

# Difference algorithms
similar = "2.2"
diff = "0.1"

# Utilities
itertools = "0.12"
futures = "0.3"

# Crypto for hashing
sha2 = "0.10" 
