[package]
name = "template_service"
version = "0.1.0"
edition = "2021"
authors = ["Lab Management Team"]
description = "Template management microservice for laboratory forms and data collection schemas"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }
jsonschema = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client for service communication
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Excel and CSV processing
calamine = "0.24"
csv = "1.3"

# Template processing
regex = "1.10"
once_cell = "1.19"
handlebars = "4.5"

# Form processing
multipart = "0.18"

# Version control
semver = "1.0"

# Decimal numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# File handling
tempfile = "3.8"
mime = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempdir = "0.3"

[[bin]]
name = "template_service"
path = "src/main.rs" 
