[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP testing
axum = "0.7"
axum-test = "15.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Random data generation
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"

# Environment
dotenvy = "0.15"

# Test utilities
once_cell = "1.19"