[package]
name = "transaction_service"
version = "0.1.0"
edition = "2024"
authors = ["TracSeq Team <dev@tracseq.com>"]
description = "Distributed transaction management service using Saga pattern for TracSeq 2.0"
license = "MIT"
keywords = ["distributed-transactions", "saga", "microservices", "consistency", "laboratory"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Random number generation for simulations
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Connection pooling
deadpool = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for service communication
reqwest = { version = "0.11", features = ["json", "stream"] }

# Event service integration
event_service = { path = "../event_service" }

# Redis for state management
redis = { version = "0.24", features = ["streams", "connection-manager", "tokio-comp"] }
deadpool-redis = "0.14"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Retry and resilience
tokio-retry = "0.3"

# State machine
state_machine_future = "0.2"

# Distributed locking
etcd-rs = { version = "1.0", optional = true }

# Monitoring and health checks
# health-check = "0.1"  # Commented out - package not found

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
wiremock = "0.5"

[features]
default = ["redis-state", "event-integration"]
redis-state = []
etcd-coordination = ["etcd-rs"]
event-integration = []

[[bin]]
name = "transaction_service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 
