[package]
name = "barcode_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true, features = ["multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Random generation
rand = "0.8"

# Pattern matching
regex = "1.10"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = "0.14"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment variables
dotenvy = "0.15"

# HTTP client (for service communication)
reqwest = { workspace = true }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Health checks
serde_with = "3.0"

[lib]
name = "barcode_service"
path = "src/lib.rs"

[[bin]]
name = "barcode-service"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }
fake = "2.9"
once_cell = "1.19"
futures = "0.3" 