[package]
name = "tracseq-circuit-breaker"
version = "0.1.0"
edition = "2021"
authors = ["TracSeq Team"]
description = "Circuit breaker implementation for TracSeq microservices"
keywords = ["circuit-breaker", "resilience", "microservices", "fault-tolerance"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Utilities
futures = "0.3"

[features]
default = ["http-client"]
http-client = ["reqwest"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
rand = "0.8"
rstest = { workspace = true }
futures = "0.3"