[package]
name = "circuit-breaker-lib"
version = "0.1.0"
edition = "2021"
authors = ["TracSeq Team"]
description = "Circuit breaker implementation for TracSeq microservices"
keywords = ["circuit-breaker", "resilience", "microservices", "fault-tolerance"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Utilities
futures = "0.3"

# Optional HTTP client support
reqwest = { version = "0.11", features = ["json"], optional = true }

# Error handling
thiserror = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

[features]
default = []
http-client = ["reqwest"]

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.18"
mockall = "0.11"
wiremock = "0.5"
rand = "0.8"

[lints]
workspace = true